--- a/package.json
+++ b/package.json
@@ -4,24 +4,20 @@
   "description": "Nobuk",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://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@github.com/evans-manyala/nobuk-hackathon.git"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/evans-manyala/nobuk-hackathon/issues"
-  },
-  "homepage": "https://github.com/evans-manyala/nobuk-hackathon#readme",
   "dependencies": {
     "axios": "^1.7.4",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.5.3"
+    "mongoose": "^8.5.3",
+    "morgan": "^1.10.0",
+    "nodemon": "^3.1.4"
   }
 }
