Removing secret access

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://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@github.com/evans-manyala/nobuk-hackathon.git"
+    "url": "git+https://github.com/evans-manyala/nobuk-hackathon.git"
   },
   "keywords": [],
   "author": "",
